# seo-app

./: .replit  README.md  main.py  package-lock.json  package.json  pasted_text_1725971034029.txt  pyproject.toml  server.js
static/css/: styles.css
static/js/: api.js  resultsDisplay.js  script.js  seoAnalysis.js  utils.js
templates/: index.html
