[tool.poetry]
name = "repl-nix-seoanalyzerjs"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
trafilatura = "^1.12.1"
flask = "^3.0.3"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
textstat = "^0.7.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
